@@ -381,6 +381,13 @@ class HtmlStatus(object):
         with open(status_file, "w") as fout:
             json.dump(status, fout)
 
+        # Older versions of ShiningPanda look for the old name, status.dat.
+        # Accomodate them if we are running under Jenkins.
+        # https://issues.jenkins-ci.org/browse/JENKINS-28428
+        if "JENKINS_URL" in os.environ:
+            with open(os.path.join(directory, "status.dat"), "w") as dat:
+                dat.write("https://issues.jenkins-ci.org/browse/JENKINS-28428\n")
+
     def settings_hash(self):
         """Get the hash of the coverage.py settings."""
         return self.settings
